# wikidata_lexeme_sql

./: README.md  TODO.md  flake8.ini  pyproject.toml  scripts.py
main/: main.py
