[tool.poetry]
name = "wikidata_lexeme_sql"
version = "0.1.0"
description = ""
authors = ["Jeremy-Hyde"]
readme = "README.md"
packages = [
    { include = "main"},
]


[tool.poetry.dependencies]
python = "^3.11"
msgspec = "^0.18.6"


[tool.poetry.group.dev.dependencies]
black = "23.1.0"
flake8 = "6.0.0"
isort = "5.12.0"
pylint = "2.16.2"
radon = "5.1.0"
mypy = "1.0.1"
vulture = "2.7"
behave = "1.2.6"
sqlalchemy-stubs = "^0.4"
pylint-pytest = "^1.1.2"

[tool.poetry.scripts]
format = 'scripts:format'
check = 'scripts:check'

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
